syntax = "proto3";

package stat;

option go_package = "api/gen";

service StatService {
  rpc GetStats(StatsRequest) returns (stream StatsResponse);
}

message StatsRequest {
  int32 n = 1;
  int32 m = 2;
}

message StatsResponse {
  float loadAverage = 1;
  float userUsage = 2;
  float sysUsage = 3;
  float idle = 4;
  string timestamp = 5;
}